trybuild-qcell/src/compiletest/tcell-16.stderr
error[E0308]: mismatched types
 --> src/compiletest/tcell-16.rs:9:22
  |
9 |     let mut owner1 = TCellOwner::<MarkerA>::new() as TCellOwner<MarkerB>;  // Compile fail
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
  |
  = note: expected struct `TCellOwner<fn(&())>`
             found struct `TCellOwner<for<'a> fn(&'a ())>`
